syntax = "proto3";

package pb;

import "score.proto";

option go_package = "github.com/DebdipWritesCode/Munshiji/backend/pb";

message UpdateScoreRequest {
  int32 score_id = 1;
  optional string note = 2;
  optional double value = 3;
}

message UpdateScoreResponse {
  Score score = 1;
}